envoy-rancher/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-global
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      allowedRoutes:
        namespaces:
          from: All        
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      hostname: "*.rancher.lightup.tw"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: eg-https
